// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project - MultiMatch - JobToPrice Component should display Title, code and paymarket 1`] = `
<pf-job-to-price
  cutDeleted={[Function EventEmitter]}
  featureImplementation={[Function String]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  modifyPricingsImplementation={[Function String]}
  showCutsLabel={[Function String]}
  toggleDataCutsLabel={[Function String]}
>
  <div
    class="result"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
    </div>
    <div
      class="dropzone"
      data-job-id="100"
      dragula="data-cuts-bag"
    />
    <div
      class="paymarket"
    >
        
    </div>
    <div
      class="d-flex mt-2"
    >
      
      <div
        class="link"
      >
         Show Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link"
      >
         Show Job Detail 
      </div>
    </div>
    
    
    
  </div>
</pf-job-to-price>
`;

exports[`Project - MultiMatch - JobToPrice Component should display data cuts when data cuts loaded 1`] = `
<pf-job-to-price
  cutDeleted={[Function EventEmitter]}
  featureImplementation={[Function String]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  modifyPricingsImplementation={[Function String]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  toggleDataCutsLabel={[Function String]}
>
  <div
    class="result"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
    </div>
    <div
      class="dropzone"
      data-job-id="100"
      dragula="data-cuts-bag"
    />
    <div
      class="paymarket"
    >
        
    </div>
    <div
      class="d-flex mt-2"
    >
      
      <div
        class="link"
      >
         Hide Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link"
      >
         Show Job Detail 
      </div>
    </div>
    
    
    <div
      class="data-cuts-container"
    >
      
      
      <table
        class="data-cuts-table"
      >
        <thead>
          <tr>
            <th>
              Title
            </th>
            <th
              class="text-center"
            >
              Base 50th
            </th>
            <th
              class="text-center"
            >
              TCC 50th
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          
          <tr>
            <td
              class="scope-cell"
            >
               Janitor/Custodian (JB122) - Payfactors 
            </td>
            <td
              class="text-center"
            >
              25.7
            </td>
            <td
              class="text-center"
            >
              100.1
            </td>
            <td
              class="text-center"
            >
              <fa-icon
                size="lg"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    
  </div>
</pf-job-to-price>
`;

exports[`Project - MultiMatch - JobToPrice Component should display error message when error found loading data cuts 1`] = `
<pf-job-to-price
  cutDeleted={[Function EventEmitter]}
  featureImplementation={[Function String]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  modifyPricingsImplementation={[Function String]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  toggleDataCutsLabel={[Function String]}
>
  <div
    class="result"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
    </div>
    <div
      class="dropzone"
      data-job-id="100"
      dragula="data-cuts-bag"
    />
    <div
      class="paymarket"
    >
        
    </div>
    <div
      class="d-flex mt-2"
    >
      
      <div
        class="link"
      >
         Hide Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link"
      >
         Show Job Detail 
      </div>
    </div>
    
    
    <div
      class="data-cuts-container"
    >
      
      <div
        class="loading-datacuts-error"
      >
        <fa-icon
          class="icon"
          icon="exclamation-triangle"
        />
         Error loading data cuts. Please try again later. 
      </div>
    </div>
    
  </div>
</pf-job-to-price>
`;

exports[`Project - MultiMatch - JobToPrice Component should display loading message when loading data cuts 1`] = `
<pf-job-to-price
  cutDeleted={[Function EventEmitter]}
  featureImplementation={[Function String]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  modifyPricingsImplementation={[Function String]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  toggleDataCutsLabel={[Function String]}
>
  <div
    class="result"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
    </div>
    <div
      class="dropzone"
      data-job-id="100"
      dragula="data-cuts-bag"
    />
    <div
      class="paymarket"
    >
        
    </div>
    <div
      class="d-flex mt-2"
    >
      
      <div
        class="link"
      >
         Hide Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link"
      >
         Show Job Detail 
      </div>
    </div>
    
    
    
    <div
      class="my-2"
    >
      <pf-loading-indicator />
       Loading Data Cuts... 
    </div>
  </div>
</pf-job-to-price>
`;

exports[`Project - MultiMatch - JobToPrice Component should display with 2 decimal precision if hourly 1`] = `
<pf-job-to-price
  cutDeleted={[Function EventEmitter]}
  featureImplementation={[Function String]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  modifyPricingsImplementation={[Function String]}
  rate={[Function String]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  toggleDataCutsLabel={[Function String]}
>
  <div
    class="result"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
    </div>
    <div
      class="dropzone"
      data-job-id="100"
      dragula="data-cuts-bag"
    />
    <div
      class="paymarket"
    >
        
    </div>
    <div
      class="d-flex mt-2"
    >
      
      <div
        class="link"
      >
         Hide Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link"
      >
         Show Job Detail 
      </div>
    </div>
    
    
    <div
      class="data-cuts-container"
    >
      
      
      <table
        class="data-cuts-table"
      >
        <thead>
          <tr>
            <th>
              Title
            </th>
            <th
              class="text-center"
            >
              Base 50th
            </th>
            <th
              class="text-center"
            >
              TCC 50th
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          
          <tr>
            <td
              class="scope-cell"
            >
               Janitor/Custodian (JB122) - Payfactors 
            </td>
            <td
              class="text-center"
            >
              25.66
            </td>
            <td
              class="text-center"
            >
              100.11
            </td>
            <td
              class="text-center"
            >
              <fa-icon
                size="lg"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    
  </div>
</pf-job-to-price>
`;

exports[`Project - MultiMatch - JobToPrice Component should hide data cuts when last data cut removed 1`] = `
<pf-job-to-price
  cutDeleted={[Function EventEmitter]}
  featureImplementation={[Function String]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  modifyPricingsImplementation={[Function String]}
  showCutsLabel={[Function String]}
  showDataCuts="false"
  toggleDataCutsLabel={[Function String]}
>
  <div
    class="result"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
    </div>
    <div
      class="dropzone"
      data-job-id="100"
      dragula="data-cuts-bag"
    />
    <div
      class="paymarket"
    >
        
    </div>
    <div
      class="d-flex mt-2"
    >
      
      <div
        class="link"
      >
         Show Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link"
      >
         Show Job Detail 
      </div>
    </div>
    
    
    
  </div>
</pf-job-to-price>
`;

exports[`Project - MultiMatch - JobToPrice Component should show data cuts when toggle clicked 1`] = `
<pf-job-to-price
  cutDeleted={[Function EventEmitter]}
  featureImplementation={[Function String]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  modifyPricingsImplementation={[Function String]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  toggleDataCutsLabel={[Function String]}
>
  <div
    class="result"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
    </div>
    <div
      class="dropzone"
      data-job-id="100"
      dragula="data-cuts-bag"
    />
    <div
      class="paymarket"
    >
        
    </div>
    <div
      class="d-flex mt-2"
    >
      
      <div
        class="link"
      >
         Hide Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link"
      >
         Show Job Detail 
      </div>
    </div>
    
    
    <div
      class="data-cuts-container"
    >
      
      
      <table
        class="data-cuts-table"
      >
        <thead>
          <tr>
            <th>
              Title
            </th>
            <th
              class="text-center"
            >
              Base 50th
            </th>
            <th
              class="text-center"
            >
              TCC 50th
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          
        </tbody>
      </table>
    </div>
    
  </div>
</pf-job-to-price>
`;

exports[`Project - MultiMatch - JobToPrice Component should show job detail when toggle clicked 1`] = `
<pf-job-to-price
  cutDeleted={[Function EventEmitter]}
  featureImplementation={[Function String]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  modifyPricingsImplementation={[Function String]}
  showCutsLabel={[Function String]}
  showJobDetail={[Function Boolean]}
  toggleDataCutsLabel={[Function String]}
>
  <div
    class="result"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
    </div>
    <div
      class="dropzone"
      data-job-id="100"
      dragula="data-cuts-bag"
    />
    <div
      class="paymarket"
    >
        
    </div>
    <div
      class="d-flex mt-2"
    >
      
      <div
        class="link"
      >
         Show Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link"
      >
         Hide Job Detail 
      </div>
    </div>
    
    <div
      class="job-detail"
    >
      <table>
        <tbody>
          <tr>
            <th>
              Family:
            </th>
            <td>
              Accounting
            </td>
          </tr>
          <tr>
            <th>
              Level:
            </th>
            <td>
              I
            </td>
          </tr>
          <tr>
            <th>
              Job Description:
            </th>
            <td>
              
              
              <pf-ellipsis-view-more />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    
    
  </div>
</pf-job-to-price>
`;

exports[`Project - MultiMatch - JobToPrice Component should show new job match cuts as highlighted 1`] = `
<pf-job-to-price
  cutDeleted={[Function EventEmitter]}
  featureImplementation={[Function String]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  modifyPricingsImplementation={[Function String]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  toggleDataCutsLabel={[Function String]}
>
  <div
    class="result"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
    </div>
    <div
      class="dropzone"
      data-job-id="100"
      dragula="data-cuts-bag"
    />
    <div
      class="paymarket"
    >
        
    </div>
    <div
      class="d-flex mt-2"
    >
      
      <div
        class="link"
      >
         Hide Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link"
      >
         Show Job Detail 
      </div>
    </div>
    
    
    <div
      class="data-cuts-container"
    >
      
      
      <table
        class="data-cuts-table"
      >
        <thead>
          <tr>
            <th>
              Title
            </th>
            <th
              class="text-center"
            >
              Base 50th
            </th>
            <th
              class="text-center"
            >
              TCC 50th
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          
          <tr
            class="highlight"
          >
            <td
              class="scope-cell"
            >
               Janitor/Custodian (JB122) - Payfactors 
            </td>
            <td
              class="text-center"
            >
              25.7
            </td>
            <td
              class="text-center"
            >
              100.1
            </td>
            <td
              class="text-center"
            >
              <fa-icon
                size="lg"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    
  </div>
</pf-job-to-price>
`;
